--- a/requirements.txt
+++ b/requirements.txt
@@ -26,18 +26,17 @@ mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvtx-cu12==12.1.105
+nvidia-cublas-cu12
+nvidia-cuda-cupti-cu12
+nvidia-cuda-nvrtc-cu12
+nvidia-cuda-runtime-cu12
+nvidia-cudnn-cu12
+nvidia-cufft-cu12
+nvidia-curand-cu12
+nvidia-cusolver-cu12
+nvidia-cusparse-cu12
+nvidia-nvjitlink-cu12
+nvidia-nvtx-cu12
 opencv-python==4.9.0.80
 packaging==23.2
 pandas==2.2.1
@@ -71,7 +70,6 @@ torch==2.2.1
 torchvision==0.17.1
 tornado==6.4
 tqdm==4.66.2
-triton==2.2.0
 typing_extensions==4.10.0
 tzdata==2024.1
 ultralytics==8.1.30
