--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
-altair==5.2.0
-attrs==23.2.0
-blinker==1.7.0
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-contourpy==1.2.0
-cycler==0.12.1
-Cython==3.0.9
-filelock==3.13.1
-fonttools==4.50.0
-fsspec==2024.3.1
-gitdb==4.0.11
-GitPython==3.1.42
-idna==3.6
-Jinja2==3.1.3
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-lapx==0.5.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.4
+altair
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+contourpy
+cycler
+Cython
+filelock
+fonttools
+fsspec
+gitdb
+GitPython
+idna
+Jinja2
+jsonschema
+jsonschema-specifications
+kiwisolver
+lapx
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+mpmath
+networkx
+numpy
 nvidia-cublas-cu12
 nvidia-cuda-cupti-cu12
 nvidia-cuda-nvrtc-cu12
@@ -37,7 +37,7 @@ nvidia-cusolver-cu12
 nvidia-cusparse-cu12
 nvidia-nvjitlink-cu12
 nvidia-nvtx-cu12
-opencv-python==4.9.0.80
+opencv-python==4.8.0.76
 packaging==23.2
 pandas==2.2.1
 pillow==10.2.0
