--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ py-cpuinfo==9.0.0
 pyarrow==15.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
-pyparsing==3.1.2
+pyparsing
 python-dateutil==2.9.0.post0
 pytube==15.0.0
 pytz==2024.1
