--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ pytz==2024.1
 PyYAML==6.0.1
 referencing==0.34.0
 requests==2.31.0
-rich==13.7.1
+rich
 rpds-py==0.18.0
 scipy==1.12.0
 seaborn==0.13.2
