--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ tzdata==2024.1
 ultralytics==8.1.30
 urllib3==2.2.1
 watchdog==4.0.0
-opencv-python
+opencv-python==4.8.0.76
 supervision
 ultralytics
 inference
