urllib new version

--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ tqdm==4.66.2
 typing_extensions==4.10.0
 tzdata==2024.1
 ultralytics==8.1.30
-urllib3==2.2.1
+urllib3
 watchdog==4.0.0
 supervision
 ultralytics
