--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ botocore==1.31.54
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.4
@@ -53,6 +54,7 @@ fsspec==2024.5.0
 gdown==5.2.0
 gitdb==4.0.11
 GitPython==3.1.27
+google==3.0.0
 google-api-core==2.19.0
 google-api-python-client==2.129.0
 google-auth==2.29.0
@@ -62,13 +64,18 @@ google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
+googletrans==4.0.0rc1
 GPUtil==1.4.0
-h11==0.14.0
-httpcore==1.0.5
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.6.1
+httpcore==0.9.1
 httplib2==0.22.0
-httpx==0.27.0
+httpx==0.13.3
 humanfriendly==10.0
-idna==3.7
+hyperframe==5.2.0
+idna==2.10
 imageio==2.34.1
 imageio-ffmpeg==0.4.9
 importlib-metadata==4.12.0
@@ -102,22 +109,22 @@ mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.25.2
-nvidia-cublas-cu12
-nvidia-cuda-cupti-cu12
-nvidia-cuda-nvrtc-cu12
-nvidia-cuda-runtime-cu12
-nvidia-cudnn-cu12
-nvidia-cufft-cu12
-nvidia-curand-cu12
-nvidia-cusolver-cu12
-nvidia-cusparse-cu12
-nvidia-nvjitlink-cu12
-nvidia-nvtx-cu12
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.1.17
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 onemetric==0.1.2
 onnxruntime==1.15.1
 openai==1.30.1
 opencv-python==4.8.0.76
-opencv-python-headless==4.9.0.80
+opencv-python-headless==4.8.0.76
 packaging==23.2
 pandas==2.2.1
 parso==0.8.4
@@ -160,7 +167,8 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytube==15.0.0
 pytz==2024.1
-pytz-deprecation-shim
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
 pywin32-ctypes==0.2.2
 PyYAML==6.0.1
 pyzmq==23.2.1
@@ -169,7 +177,7 @@ redis==5.0.4
 referencing==0.34.0
 requests==2.31.0
 requests-toolbelt==1.0.0
-rfc3986==2.0.0
+rfc3986==1.5.0
 rich==13.5.2
 rpds-py==0.18.0
 rsa==4.7.2
@@ -188,7 +196,7 @@ stack-data==0.6.3
 starlette==0.37.2
 streamlit==1.32.2
 streamlit-cookies-manager==0.2.0
-streamlit-login-auth-ui==0.2.0
+
 streamlit-lottie==0.0.5
 streamlit-option-menu==0.3.13
 structlog==24.1.0
@@ -207,6 +215,7 @@ torchvision==0.17.1
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.3
+trans==2.1.0
 trycourier==4.4.0
 twine==4.0.1
 typer==0.9.0
